stupid resume icon mobile fix

--- a/theme/assets/css/style.css
+++ b/theme/assets/css/style.css
@@ -330,6 +330,11 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
 }
 
+.gallery:last-of-type {
+  margin: auto;
+  margin-top: 30px;
+}
+
 .gallery img:last-of-type {
   background-color: lavender;
 }
